--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytemuck = "1.13.1"
+anyhow = "1.0.72"
+bytemuck = {version="1.13.1",features=["derive"]}
+cgmath = "0.18.0"
 env_logger = "0.10.0"
 input = "0.8.2"
 log = "0.4.19"
@@ -19,3 +21,8 @@ wayland-backend = { version = "0.1.2", features = ["client_system"] }
 wayland-client = { version = "0.30.2", features = ["calloop"] }
 wgpu = "0.15.1"
 xkbcommon = "0.5.0"
+
+[dependencies.image]
+version = "0.24.6"
+default-features = false
+features = ["png", "jpeg"]
