--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.72"
 bytemuck = {version="1.13.1",features=["derive"]}
 cgmath = "0.18.0"
 env_logger = "0.10.0"
+hyprland = "0.3.9"
 input = "0.8.2"
 log = "0.4.19"
 nanorand = "0.7.0"
