--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ wayland-backend = { version = "0.1.2", features = ["client_system"] }
 wayland-client = { version = "0.30.2", features = ["calloop"] }
 wgpu = "0.15.1"
 xkbcommon = "0.5.0"
+hyprland = "0.4.0-beta.1"
